<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:text="@string/is_ref"
	    	android:textColor="#000000"/>
	    <RadioGroup android:id="@+id/RadioGroup02"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:orientation="horizontal" android:gravity="left">
			<RadioButton android:text="@string/is_ref_yes"
				android:id="@+id/RadioButton03" android:layout_width="150dp" android:button="@drawable/checkbox"
				android:layout_height="wrap_content" android:textColor="#000000">
			</RadioButton>
			<RadioButton android:text="@string/is_ref_no"
				android:id="@+id/RadioButton04" android:layout_width="wrap_content" android:button="@drawable/checkbox"
				android:layout_height="wrap_content" android:textColor="#000000">
			</RadioButton>
		</RadioGroup>
    </LinearLayout>   
	<TextView
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/config_update_time"
    	android:textColor="#000000"/>
    <EditText
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:inputType="number"
    	android:id="@+id/ET_config_update_time"
    	android:textColor="#000000"
    	android:background="@drawable/spinner_text_style"/>
    <LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
    	<Button
    		android:id="@+id/BT_config_update_ok"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:text="@android:string/ok"
    		android:textColor="#000000"/>
    	<Button
    		android:id="@+id/BT_config_update_cancle"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:text="@android:string/cancel"
    		android:textColor="#000000"/>
    </LinearLayout>
</LinearLayout>
