<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <!-- 0Bp_4coG-wdSGGqPGodFcEa1QYXrjhByAEZ4dxA -->
    <!-- 正式：0HBaOtYsZcTKca0nED160K92t1J7_-zt6o8xLIA -->
	<com.google.android.maps.MapView
	    android:id="@+id/MapView"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:apiKey="0HBaOtYsZcTKca0nED160K92t1J7_-zt6o8xLIA"/>
	<RelativeLayout 
	    android:id="@+id/rl_search"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	        <RelativeLayout 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_toLeftOf="@+id/iv_Me">
		        <AutoCompleteTextView 
				    android:id="@+id/et_MapSearch"
				    android:layout_width="fill_parent"
				    android:layout_marginTop="4dp"
				    android:paddingRight="40dp"
				    android:singleLine="true"
				    android:layout_height="wrap_content"/>
		        <ImageView 
		            android:id="@+id/iv_MapClear"
		            android:layout_width="40dp"
		            android:layout_height="40dp"
		            android:padding="10dp"
		            android:visibility="gone"
		            android:contentDescription="@string/image_description"
		            android:layout_alignParentRight="true"
		            android:layout_centerVertical="true"
		            android:src="@drawable/delete"/>
		    </RelativeLayout>
		    <ImageView 
		        android:id="@+id/iv_Me"
		        android:layout_width="40dp"
		        android:layout_height="40dp"
		        android:contentDescription="@string/image_description"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true"
		        android:src="@drawable/myplaces"/>
	</RelativeLayout>	    
    <ImageView 
        android:id="@+id/iv_Search"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/image_description"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:src="@drawable/trun_left"/>
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_search">
        <TextView 
		    android:id="@+id/tv_map_change"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentRight="true"
		    android:textSize="14sp"
		    android:paddingLeft="5dp"
		    android:paddingRight="5dp"
		    android:layout_marginTop="1dp"
		    android:layout_marginRight="5dp"
		    android:textColor="#000000"
		    android:background="#FFFFFF"
		    android:text="@string/Satellite"/>
    </RelativeLayout>
    <Button 
        android:id="@+id/bt_ZoomDown"
        android:layout_height="40dp"
        android:layout_width="50dp"
        android:background="@drawable/bt_bg_down"
        android:layout_above="@+id/tv_address"
        android:layout_toLeftOf="@+id/bt_ZoomUp"/>
    <Button 
        android:id="@+id/bt_ZoomUp"
        android:layout_height="40dp"
        android:layout_width="50dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/bt_bg_up"
        android:layout_above="@+id/tv_address"
        android:layout_alignParentRight="true"/>
    <TextView 
    	android:id="@+id/tv_address"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="5dp"
    	android:textSize="12sp"
    	android:layout_alignParentBottom="true"
    	android:textColor="#FFFFFF"
    	android:background="@drawable/bg_address"/>
    <LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:id="@+id/Layout_bar"
		android:visibility="gone"
		android:layout_alignParentBottom="true"
		android:background="@android:color/background_dark">
		<LinearLayout 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:orientation="horizontal">
			<ImageView 
			    android:id="@+id/iv_play"
			    android:layout_width="40dp"
			    android:layout_height="40dp"
			    android:contentDescription="@string/image_description"
			    android:layout_marginRight="5dp"
			    android:src="@drawable/play"/>
			<ImageView 
			    android:id="@+id/iv_pause"
			    android:layout_width="40dp"
			    android:layout_height="40dp"
			    android:contentDescription="@string/image_description"
			    android:layout_marginRight="5dp"
			    android:src="@drawable/pause"/>
			<ImageView 
			    android:id="@+id/iv_stop"
			    android:layout_width="40dp"
			    android:layout_height="40dp"
			    android:contentDescription="@string/image_description"
			    android:layout_marginRight="5dp"
			    android:src="@drawable/stop"/>
			<TextView 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/locas_speed"/>
			<SeekBar
			    android:id="@+id/sb_speed"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:max="100"
			    android:paddingLeft="10dp"
			    android:paddingRight="10dp" />
		</LinearLayout>
		<ProgressBar 
			android:id="@+id/show_bar"
			style="?android:attr/progressBarStyleHorizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>	
	</LinearLayout>
</RelativeLayout>